--- a/exC1.html
+++ b/exC1.html
@@ -10,7 +10,7 @@
      <script>
        const temp = document.querySelector("head");  
        temp.textContent = "Hello World";
-       
+       alert ("Hello World");
     </script>
   </body>
  </html>
