--- a/temp.html
+++ b/temp.html
@@ -5,11 +5,15 @@
   </head>
   <body>
    <div id="head">こんにちは </div>  
-   <button id="b1"> 色の変更 </button　　>
+   <div id="b1">
+     <button onclick="buttonClick('#ff0000')">色の変更</button> 
+   </div>
+  </body>
    
     <script>
-    function myFunction() {
-    }
+    function buttonClick( newColor ) {
+      document.getElementById('b1').style.background = newColor;
+       }
 
     let b = document.getElementById('b1');
     b.addEvent("click", myfunction)
